# LineSegmentFitting

./: CMakeLists.txt  README.md  plot_line.py  pointcloud.txt
data/: merged_cloud.asc  merged_cloud.pcd  merged_cloud10.asc  merged_cloud10.pcd  merged_cloud11.asc  merged_cloud11.pcd  merged_cloud11_1.asc  merged_cloud11_1.pcd  merged_cloud11_2.asc  merged_cloud11_2.pcd  merged_cloud12.asc  merged_cloud12.pcd  merged_cloud13.asc  merged_cloud13.pcd  merged_cloud14.asc  merged_cloud14.pcd  merged_cloud2.asc  merged_cloud2.pcd  merged_cloud2_1.pcd  merged_cloud3.asc  merged_cloud3.pcd  merged_cloud4.asc  merged_cloud4.pcd  merged_cloud4_2.asc  merged_cloud4_2.pcd  merged_cloud5.asc  merged_cloud5.pcd  merged_cloud6.asc  merged_cloud6.pcd  merged_cloud7.asc  merged_cloud7.pcd  merged_cloud8.asc  merged_cloud8.pcd  merged_cloud9.asc  merged_cloud9.pcd  merged_cloud9_1.asc  merged_cloud9_1.pcd  merged_cloud_8_1.asc  merged_cloud_8_1.pcd  merged_cloud_down.pcd  (+19 more)
src/: hough_transform.cpp  hough_transform.h  line_segment.cpp  line_segment.h  main.cpp
